Minor fixes.
- Icon preview invisible.
- Typo

--- a/source/sass/pages/_icon-picker.scss
+++ b/source/sass/pages/_icon-picker.scss
@@ -9,6 +9,8 @@
     .current-icon-preview {
         max-height: 32px;
         max-width: 32px;
+        height: 100%;
+        width: 100%;
     }
 }
 
